[project]
name = "machship-sdk"
version = "0.1.12"
description = "Unofficial MachShip SDK built with httpx and Pydantic"
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "Daniel Montecillo", email = "daniel.montecillo@montecillo.ca" }
]
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.8.2,<3",
]

[project.urls]
Homepage = "https://github.com/Leggendario12/machship-sdk"
Source = "https://github.com/Leggendario12/machship-sdk"
Issues = "https://github.com/Leggendario12/machship-sdk/issues"

[project.optional-dependencies]
settings = [
    "pydantic-settings",
]
retries = [
    "tenacity",
]
logging = [
    "structlog",
]
telemetry = [
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-httpx",
]
cache = [
    "cachetools",
]
json = [
    "orjson",
]
testing = [
    "respx",
]
all = [
    "pydantic-settings",
    "tenacity",
    "structlog",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-httpx",
    "cachetools",
    "orjson",
    "respx",
]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.55.0",
    "build",
    "cachetools",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-sdk",
    "flake8>=7.3.0",
    "flake8-bugbear>=25.11.29",
    "flake8-comprehensions>=3.17.0",
    "flake8-docstrings>=1.7.0",
    "flake8-simplify>=0.30.0",
    "pytest-cov>=7.0.0",
    "orjson",
    "pydantic-settings",
    "respx",
    "pytest>=8.3.0",
    "structlog",
    "tenacity",
    "twine",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
